# ClipVault

./: .eslintrc.cjs  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  install-deps.ps1  package-lock.json  package.json  palette.html  palette.tsx  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-landing.yml
clipvault-extension/: background.js  manifest.json  options.html  popup.css  popup.html  popup.js
docs/: architecture.md  keyboard.md
installer/nsis/: installer.nsi
installer/wix/: clipvault.wxs
landing/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
landing/src/: App.tsx  index.css
landing/src/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  LiveDemo.tsx  Nav.tsx  WhyClipVault.tsx
landing/src/lib/: config.ts
resources/: build-portable.cmd  generate-icons.ps1
scripts/: find_port.sh  fix_caddyfile.py  start_downloads.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/benches/: search.rs
src-tauri/capabilities/: main.json  palette.json
src-tauri/src/: commands.rs  lib.rs  main.rs  ocr.rs  state.rs
src-tauri/src/clipboard/: files.rs  mod.rs  source.rs  watcher.rs
src-tauri/src/db/: migrations.rs  mod.rs  repo.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/http_receiver/: mod.rs
src-tauri/src/images/: mod.rs  storage.rs
src-tauri/src/import_export/: mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/paste/: mod.rs
src-tauri/src/ring/: buffer.rs  controller.rs  mod.rs  overlay.rs  writer.rs
src-tauri/src/search/: mod.rs
src-tauri/src/settings/: backup.rs  mod.rs  retention.rs  types.rs
src-tauri/src/snippets/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/tests/: db.rs  load.rs
src/components/: AppShell.tsx  ClipRow.tsx  CodePreview.tsx  CommandPalette.tsx  HotkeyRecorder.tsx  RingOverlay.tsx  UserSwitcher.tsx
src/features/clip/: queries.ts
src/features/search/: useSearch.ts
src/features/timeline/: grouping.test.ts  grouping.ts
src/hooks/: useClipsInvalidation.ts  useRing.ts  useThemeSync.ts
src/lib/: languages.ts  schemas.test.ts  schemas.ts  tauri.ts  useHighlighter.ts  utils.ts
src/routes/: ActivityPage.tsx  CollectionsPage.tsx  FavoritesPage.tsx  ImagesPage.tsx  SettingsPage.tsx  SnippetsPage.tsx  TimelinePage.tsx
src/stores/: clipStore.ts  theme.tsx
src/styles/: globals.css
src/test/: setup.ts  utils.test.ts
src/types/: index.ts
