[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ClipVault Team"]
license = "MIT"
repository = "https://github.com/clipvault/clipvault"
rust-version = "1.77.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
